# api/routes.go
@@ -1,6 +1,10 @@
 package api
 
 import (
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+
+	_ "github.com/Brown-Moses/paykit/docs" // generated by swag init
 	"github.com/Brown-Moses/paykit/internal/auth"
 	"github.com/Brown-Moses/paykit/internal/storage"
 	webhooks "github.com/Brown-Moses/paykit/internal/webhook"
@@ -13,17 +17,23 @@ func NewRouter(verifier *auth.Verifier, store *storage.Store) *gin.Engine {
 
 	webHook := webhooks.NewHandler(verifier, store)
 
-	//public -no auth
-	r.POST("/webhook/momo", webHook.HandleMoMoWebhook)
+	// System
+	r.GET("/health", webHook.Health)
+
+	//swagger docs ui
+	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	// Public
+	r.POST("/webhook/momo/:merchant_id", webHook.HandleMoMoWebhook)
 	r.POST("/merchants", webHook.CreateMerchant)
 
-	//protected -requires API key
+	// Protected — all plural, all consistent
 	protected := r.Group("/")
 	protected.Use(auth.RequireAPIKey(store))
 	{
-		protected.GET("/transaction/:id", webHook.GetTransaction)
-		protected.GET("/transactions/:id/deliveries", webHook.GetDeliveryLogs)
 		protected.GET("/transactions", webHook.ListTransactions)
+		protected.GET("/transactions/:id", webHook.GetTransaction)
+		protected.GET("/transactions/:id/deliveries", webHook.GetDeliveryLogs)
 	}
 	return r
 }
